<resources>
    <string name="app_name">CalculatorForAll</string>
    <string name="percentage">Percentage</string>
    <string name="average">Average</string>
    <string name="proportions">Proportions</string>
    <string name="random">Random number generator</string>
    <string name="data">Date</string>
    <string name="BMI">BMI</string>
    <string name="fuel">Fuel volume</string>
    <string name="dataStorage">Data storage conversion</string>
    <string name="dataRate">Data rate conversion</string>
    <string name="square">Areas</string>
    <string name="value">Value</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="squareConvertor">Area conversion</string>
    <string name="valueConvertor">Volume conversion</string>
    <string name="angel">Conversion of degree measures</string>
    <string name="power">Power</string>
    <string name="temperature">Temperature</string>
    <string name="acceleration">Acceleration</string>
    <string name="speed">Speed</string>
    <string name="pressure">Pressure conversion</string>
    <string name="weight">Weight conversion</string>
    <string name="currency">Currency converter</string>
    <string name="tip">Tips</string>
    <string name="credit">Credit</string>
    <string name="deposit">Deposit</string>
    <string name="tax">Sales tax</string>
    <string name="off">Shutdown</string>
    <string name="linear_function">Linear equation</string>
    <string name="quadratic_equation">Quadratic equation</string>
    <string name="konv">Convert</string>
    <string name="calc">Calculate</string>
    <string name="firstNumber">The first value</string>
    <string name="secondNumber">The second meaning</string>
    <string name="third">The third value</string>
    <string name="fourth">The fourth value</string>
    <string name="vaga">Your weight (kg)</string>
    <string name="visota">Your height (cm)</string>
    <string name="finishValue">The final value</string>
    <string name="geometry">Geometry</string>
    <string name="algebra">Algebra</string>
    <string name="finance">Finances</string>
    <string name="physik">Physics</string>
    <string name="life">household</string>
    <string name="of">Off</string>
    <string name="allSum">Enter the full amount</string>
    <string name="percentPerMonth">Enter interest (per month)</string>
    <string name="fullData">Enter the date (in months)</string>
    <string name="startCurrency">Initial currency</string>
    <string name="YourUp">Your earnings</string>
    <string name="valueWithX">Values near X (A)</string>
    <string name="valueWithOutX">Values without X (B)</string>
    <string name="dataDif">Difference between dates</string>
    <string name="percent">Enter the percentage</string>
    <string name="YourUpOrDown">Your increase / decrease</string>
    <string name="firstBarrier">Initial value</string>
    <string name="secondBarrier">The last meaning</string>
    <string name="allWork">All work</string>
    <string name="allTimes">All time</string>
    <string name="voltage">High-voltage</string>
    <string name="amperage">Amperage</string>
    <string name="resistance">Resistance</string>
    <string name="lessBarrier">Smaller number</string>
    <string name="LargestBarrier">More number</string>
    <string name="SecondDate">Choose a second date</string>
    <string name="firstDate">Choose the first date</string>
    <string name="January">Jan.</string>
    <string name="February">Feb.</string>
    <string name="March">Mar.</string>
    <string name="April">Apr.</string>
    <string name="May">May</string>
    <string name="June">Jun.</string>
    <string name="July">Jul.</string>
    <string name="August">Aug.</string>
    <string name="September">Sep.</string>
    <string name="October">Oct.</string>
    <string name="November">Nov.</string>
    <string name="December">Dec.</string>
    <string name="GCDandLCM">GCD and LCM</string>
    <string name="search">Search</string>
    <string name="GDC">GDC</string>
    <string name="LCM">LCM</string>
    <string name="zina">Price per product</string>
    <string name="oneTax">Tax per unit</string>
    <string name="Increment">Increment</string>
    <string name="Decrease">Decrease</string>
    <string name="SumOfTax">Value of Tax</string>
    <string name="SumBil">Check amount</string>
    <string name="People">Number of people</string>
    <string name="feeFromEach">Fee from each person</string>
    <string name="noResult">Sorry, nothing was found for your query. Make sure you typed correctly.</string>
    <string name="Error">An error has occurred</string>
    <string name="ErrorText">Oops, it seems like an error occurred. Please try again.</string>
    <string name="InternetError">Oops, unable to connect with the server. Check your internet connection and try again.</string>
    <string name="ok">OK</string>
    <string name="Hello">Hello!</string>
    <string name="Welcome">Welcome to CalculatorForAll</string>
    <string name="answer">Answers</string>
    <string name="switch_off">Switch off</string>
    <string name="getAnswer">Get answers to your questions right away</string>
    <string name="ShutDown">Pretend to shut down at any time</string>
    <string name="prism">Prism</string>
    <string name="pyramid">Pyramid</string>
    <string name="Cylinder">Cylinder</string>
    <string name="Cone">Cone</string>
    <string name="Sphere">Sphere</string>
    <string name="SquareMain">Area foundations</string>
    <string name="height">Height</string>
    <string name="radius">Radius</string>
    <string name="Triangel">Triangle</string>
    <string name="Parallelogram">Parallelogram</string>
    <string name="Rhombus">Rhombus</string>
    <string name="Rectangle">Rectangle</string>
    <string name="Trapeze">Trapeze</string>
    <string name="first_side">First side</string>
    <string name="second_side">Second side</string>
    <string name="ValueSquare">Side area of 3D figures</string>
    <string name="baseperimetr">Perimeter of the base</string>
    <string name="apopheme">Apopheme</string>
    <string name="creature">Creature</string>
    <string name="rolladice">Roll a dice</string>
    <string name="roll">Roll</string>
    <string name="flip" translatable="false">Flip</string>
    <string name="flipacoin">Flip a coin</string>
    <string-array name="Creative">
        <item>you have a creature</item>
        <item>you haven`t a creature</item>
    </string-array>
    <string-array name="trigonometryList">
        <item>Sine</item>
        <item>Cosine</item>
        <item>Tangent</item>
        <item>Сotangent</item>
        <item>Arcsine</item>
        <item>Arccosine</item>
        <item>Arctangent</item>
        <item>Arccotangent</item>
    </string-array>
    <string-array name="country">
        <item>France</item>
        <item>Italy</item>
        <item>Germany</item>
        <item>Ukraine</item>
        <item>Netherlands</item>
        <item>USA</item>
        <item>Japan</item>
        <item>Czech Republic</item>
    </string-array>
    <string-array name="upOrDown">
        <item>Increment</item>
        <item>Decrease</item>
    </string-array>
    <string-array name="znak">
        <item>+(Плюс)</item>
        <item>-(Мінус)</item>
    </string-array>
    <string-array name="acceleration">
        <item>m/s^2</item>
        <item>ft/s^2</item>
        <item>g</item>
        <item>Gal</item>
    </string-array>
    <string-array name="numberSystems">
        <item>binary</item>
        <item>decimal</item>
        <item>octal</item>
        <item>hexadecimal</item>
    </string-array>
    <string-array name="fuel">
        <item>l/100km</item>
        <item>mpg</item>
        <item>l/m</item>
        <item>mpl</item>
    </string-array>
    <string-array name="dataStorage">
        <item>Mb</item>
        <item>Gb</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string-array name="dataRate">
        <item>Kb/s</item>
        <item>Mb/s</item>
        <item>Gb/s</item>
        <item>Tb/s</item>
    </string-array>
    <string-array name="square">
        <item>cm^2</item>
        <item>m^2</item>
        <item>km^2</item>
        <item>ft^2</item>
        <item>yd^2</item>
        <item>ar</item>
        <item>ha</item>
    </string-array>
    <string-array name="value">
        <item>m^3</item>
        <item>l</item>
        <item>mm^3</item>
        <item>ml</item>
        <item>cm^3</item>
    </string-array>
    <string-array name="angel">
        <item>radian</item>
        <item>degree</item>
        <item>minute</item>
        <item>second</item>
    </string-array>
    <string-array name="temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvins</item>
    </string-array>
    <string-array name="speed">
        <item>m/s</item>
        <item>km/h</item>
        <item>mph</item>
        <item>ft/s</item>
    </string-array>
    <string-array name="pressure">
        <item>atm</item>
        <item>bar</item>
        <item>N/m^2</item>
        <item>psi</item>
    </string-array>
    <string-array name="weight">
        <item>g</item>
        <item>kg</item>
        <item>t</item>
        <item>lb(pound)</item>
    </string-array>
    <string-array name="distance">
        <item>mm</item>
        <item>sm</item>
        <item>dm</item>
        <item>m</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>mi</item>
    </string-array>
    <string-array name="average">
        <item>Arithmetic</item>
        <item>Geometric</item>
        <item>Square</item>
        <item>Harmonious</item>
    </string-array>
    <string-array name="currency">
        <item>UAH</item>
        <item>CZK</item>
        <item>USD</item>
        <item>BYN</item>
        <item>EUR</item>
        <item>XAU</item>
        <item>XAG</item>
        <item>XPT</item>
        <item>XPD</item>
    </string-array>
    <string-array name="power">
        <item>A/t</item>
        <item>U*I</item>
        <item>I^2*R</item>
        <item>U^2/R</item>
    </string-array>
    <string name="title_activity_dice_roller">DiceRoller</string>
</resources>