<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Triangel"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/triangel_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/switch_off"
        android:src="@drawable/off_icon"
        style="@style/buttonStyle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/button_style"
        android:text="@string/off"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:gravity="center_horizontal"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/Triangel"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="185dp"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:hint="@string/SquareMain"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/second_number"
        app:layout_constraintEnd_toStartOf="@+id/second_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/second_number"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="185dp"
        android:layout_height="56dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/calculate"
        style="@style/buttonStyle"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:text="@string/calc"
        android:layout_height="wrap_content"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        app:layout_constraintBottom_toTopOf="@+id/text_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_number" />

    <TextView
        android:id="@+id/text_finish"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/edit_text_style"
        android:gravity="center"
        android:hint="@string/finishValue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_number" />

</androidx.constraintlayout.widget.ConstraintLayout>